# job-shop-scheduler

./: LICENSE  README.md  pyproject.toml
src/job_shop_scheduler/: __init__.py  gui.py  models.py  scheduler.py
